--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,3 +3,7 @@ kamal:
   name: Kamal Joshi
   email: admin@upnotes.io
   web: https://twitter.com/kamalkishor1991
+bhuwan:
+  name: Bhuwan Chandra Joshi
+  email: bhuwanchandra.it@gmail.com
+  web: https://twitter.com/bhujoshi2020
